src/test/fail/missing_return.ly
#[
SyntaxError: Missing return statement at end of function.
Where: File "test/fail/missing_return.ly" at line 6
]#

define f( => integer) {  }
